--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -11,13 +11,11 @@
 
   @media (min-width: $viewport-tablet) {
     gap: 30px;
-    max-width: 972px;
   }
 
   @media (min-width: $viewport-desktop) {
-    flex-direction: row;
-    gap: 80px;
-    max-width: 1500px;
+    flex-flow: wrap;
+    gap: 79px;
   }
 }
 
@@ -67,7 +65,7 @@
   }
 
   @media (min-width: $viewport-desktop) {
-    width: 47%;
+    width: 570px;
     padding: 77px 0 59px 52px;
   }
 }
