--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -16,7 +16,7 @@
   list-style-type: none;
 }
 
-/* ДЛЯ СБРОСА ВНЕШНИХ И ВНУТРЕННИХ ОТСТЦПОВ */
+/* ДЛЯ СБРОСА ВНЕШНИХ И ВНУТРЕННИХ ОТСТУПОВ */
 @mixin mp-reset() {
   margin: 0;
   padding: 0;
