--- a/source/styles/blocks/additional-products.scss
+++ b/source/styles/blocks/additional-products.scss
@@ -1,13 +1,5 @@
 .additional-products {
   background-color: #ffffff;
-
-  @media (min-width: $viewport-tablet) {
-    max-width: 800px;
-  }
-
-  @media (min-width: $viewport-desktop) {
-    max-width: 1500px;
-  }
 }
 
 .additional-products__title {
@@ -174,7 +166,7 @@
   width: 100%;
   height: 290px;
   background-color: rgba(104, 183, 56, 0.85);
-  background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-mobile@1x.jpg") 1x, url("../../images/cat-case-mobile@2x.jpg") 2x);
+  background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-mobile@1x.webp") 1x, url("../../images/cat-case-mobile@2x.webp") 2x, url("../../images/cat-case-mobile@1x.jpg") 1x, url("../../images/cat-case-mobile@2x.jpg") 2x);
   background-repeat: no-repeat;
   background-size: 100% auto;
 
@@ -201,7 +193,7 @@
   }
 
   @media (min-width: $viewport-tablet) {
-    background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-tablet@1x.jpg") 1x, url("../../images/cat-case-tablet@2x.jpg") 2x);
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-tablet@1x.webp") 1x, url("../../images/cat-case-tablet@2x.webp") 2x, url("../../images/cat-case-tablet@1x.jpg") 1x, url("../../images/cat-case-tablet@2x.jpg") 2x);
     height: 200px;
 
     &::before {
@@ -214,7 +206,7 @@
     position: absolute;
     right: 0;
     top: -13px;
-    background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-desktop@1x.jpg") 1x, url("../../images/cat-case-desktop@2x.jpg") 2x);
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-desktop@1x.webp") 1x, url("../../images/cat-case-desktop@2x.webp") 2x, url("../../images/cat-case-desktop@1x.jpg") 1x, url("../../images/cat-case-desktop@2x.jpg") 2x);
     width: 245px;
     min-height: 288px;
     margin-left: 81px;
