--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -7,30 +7,26 @@
   @media (min-width: $viewport-desktop) {
     grid-template-columns: 110px 565px auto;
     grid-template-rows: 95px auto 106px;
+    max-width: 2000px;
+    margin: 0 auto;
   }
 }
 
 .contacts__map-wrapper {
   width: 100%;
-  background-image: image-set(url("../../images/map-mobile@1x.png") 1x, url("../../images/map-mobile@2x.png") 2x);
+  background-image: image-set(url("../../images/map-mobile@1x.webp") 1x, url("../../images/map-mobile@2x.webp") 2x, url("../../images/map-mobile@1x.jpg") 1x, url("../../images/map-mobile@2x.jpg") 2x);
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
 
   @media (min-width: $viewport-tablet) {
-    background-image: image-set(url("../../images/map-tablet@1x.png") 1x, url("../../images/map-tablet@2x.png") 2x);
+    background-image: image-set(url("../../images/map-tablet@1x.webp") 1x, url("../../images/map-tablet@2x.webp") 2x, url("../../images/map-tablet@1x.jpg") 1x, url("../../images/map-tablet@2x.jpg") 2x);
   }
 
   @media (min-width: $viewport-desktop) {
     grid-area: 1 / 1 / 4 / 4;
-    background-image: image-set(url("../../images/map-desktop@1x.png") 1x, url("../../images/map-desktop@2x.png") 2x);
+    background-image: image-set(url("../../images/map-desktop@1x.webp") 1x, url("../../images/map-desktop@2x.webp") 2x, url("../../images/map-desktop@1x.jpg") 1x, url("../../images/map-desktop@2x.jpg") 2x);
   }
-}
-
-.contacts__image {
-  display: block;
-  object-fit: contain;
-  width: 100%;
-  height: auto;
 }
 
 .contacts__remote-map {
