--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,23 +1,17 @@
 .main-header {
   background-color: #ffffff;
-  color: #ffffff;
-  padding-bottom: 20px;
 
   @media (min-width: $viewport-tablet) {
     padding-top: 25px;
     padding-inline: 30px;
     min-width: 708px;
-    padding-bottom: 0;
   }
 
   @media (min-width: $viewport-desktop) {
     background-color: #ffffff;
-    background-image: image-set(url("../../images/hero-cat-full-desktop@1x.jpg") 1x, url("../../images/hero-cat-full-desktop@2x.jpg") 2x), linear-gradient(to right, #62a53b, #62a53b);
-    background-repeat: no-repeat;
-    background-position: 50vw 0;
     padding-top: 55px;
     padding-inline: 110px;
-    padding-bottom: 50px;
+    padding-bottom: 51px;
   }
 }
 
@@ -34,8 +28,12 @@
   }
 }
 
-.main-header--no-background {
-  background: none;
+.main-header--desktop-background {
+  @media (min-width: $viewport-desktop) {
+    background-image: image-set(url("../../images/hero-cat-full-desktop@1x.webp") type("image/webp") 1x, url("../../images/hero-cat-full-desktop@2x.webp") type("image/webp") 2x, url("../../images/hero-cat-full-desktop@1x.jpg") 1x, url("../../images/hero-cat-full-desktop@2x.jpg") 2x), linear-gradient(to right, #62a53b, #62a53b);
+    background-repeat: no-repeat;
+    background-position: 50vw 0;
+  }
 }
 
 .main-header__header-wrap {
