--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -14,10 +14,11 @@
 }
 
 .page__catalog {
-  margin-bottom: 20px;
+  margin-block: 20px;
 
   @media (min-width: $viewport-tablet) {
     margin-bottom: 45px;
+    margin-top: 0;
   }
 
   @media (min-width: $viewport-desktop) {
