--- a/source/styles/blocks/products-card.scss
+++ b/source/styles/blocks/products-card.scss
@@ -60,14 +60,23 @@
   @media (min-width: $viewport-tablet) {
     border: 2px solid #f2f2f2;
     box-sizing: border-box;
-    align-self: end;
     padding-top: 0;
     padding-bottom: 38px;
+    margin-top: 75px;
   }
 }
 
 .products-card__image-link {
   grid-area: 1 / 1 / 3 / 2;
+
+  &:hover,
+  &:focus-visible {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 
   @media (min-width: $viewport-tablet) {
     margin-bottom: 22px;
@@ -100,6 +109,15 @@
   margin-bottom: 14px;
   grid-area: 1 / 2 / 2 / 3;
 
+  &:hover,
+  &:focus-visible {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   @media (min-width: $viewport-tablet) {
     text-align: center;
     width: 135px;
@@ -126,11 +144,10 @@
 }
 
 .products-card__details {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-area: 2 / 2 / 3 / 3;
-  align-items: center;
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  grid-area: 2 / 2 / 3 / 3;
 
   @media (min-width: $viewport-tablet) {
     width: 250px;
@@ -146,30 +163,26 @@
 
 .products-card__detail {
   justify-self: end;
+  max-width: 50%;
 }
 
-.products-card__details-name {
+.products-card__details-wrap {
   position: relative;
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
 
-  &:nth-of-type(2) {
-    @media (min-width: $viewport-desktop) {
-      padding-bottom: 1px;
-    }
-  }
-
-  &:nth-of-type(3) {
-    @media (min-width: $viewport-desktop) {
-      &::after {
-        top: 30px;
-      }
+  &:nth-child(2) {
+    @media (min-width: $viewport-tablet) {
+      min-height: 24px;
     }
   }
 
   @media (min-width: $viewport-tablet) {
     &::after {
-      position: absolute;
       content: "";
-      top: 25px;
+      position: absolute;
+      top: calc(100% + 5px);
       left: 0;
       width: 250px;
       height: 1px;
@@ -184,6 +197,10 @@
   }
 }
 
+.products-card__details-name {
+  max-width: 50%;
+}
+
 .products-card__more-title {
   position: relative;
   margin: 0;
@@ -191,6 +208,7 @@
   margin-bottom: 8px;
   text-align: center;
   text-transform: uppercase;
+  width: 204px;
 
   &::before,
   &::after {
@@ -230,7 +248,7 @@
   }
 
   @media (min-width: $viewport-tablet) {
-    padding-top: 157px;
+    padding-top: 160px;
     margin-bottom: 23px;
     width: 134px;
   }
