--- a/source/styles/blocks/products.scss
+++ b/source/styles/blocks/products.scss
@@ -1,7 +1,7 @@
 .products {
   position: relative;
   background-color: #ffffff;
-  padding-top: 13px;
+  padding-top: 27px;
 
   &::before {
     content: "";
@@ -19,7 +19,11 @@
   }
 
   @media (min-width: $viewport-tablet) {
-    padding-top: 38px;
+    padding-top: 41px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    padding-top: 22px;
   }
 }
 
@@ -29,17 +33,12 @@
   font-size: 36px;
   line-height: 36px;
   margin: 0;
-  margin-top: 14px;
   margin-bottom: 61px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 60px;
     line-height: 60px;
-    margin: 27px 0 84px;
-  }
-
-  @media (min-width: $viewport-desktop) {
-    margin-top: 36px;
+    margin-bottom: 84px;
   }
 }
 
