--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -16,6 +16,7 @@
 .subscribe__title {
   @include mp-reset();
   font-size: 24px;
+  font-weight: 400;
   line-height: 24px;
   margin-bottom: 32px;
 
@@ -41,6 +42,7 @@
   @media (min-width: $viewport-tablet) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    align-items: center;
     margin: 0 auto;
     width: 632px;
   }
