--- a/source/styles/blocks/additional-products.scss
+++ b/source/styles/blocks/additional-products.scss
@@ -1,6 +1,3 @@
-.additional-products {
-  background-color: #ffffff;
-}
 
 .additional-products__title {
   font-family: $headers-font;
@@ -31,7 +28,6 @@
   flex-direction: column;
   gap: 32px;
   margin-bottom: 54px;
-  width: 100%;
 
   @media (min-width: $viewport-tablet) {
     gap: 54px;
@@ -128,11 +124,11 @@
     margin-bottom: 0;
     padding-top: 3px;
     padding-right: 3px;
+    gap: 10px;
   }
 
   @media (min-width: $viewport-desktop) {
-    justify-content: space-between;
-    gap: 112px;
+    justify-content: start;
     width: 285px;
     padding-top: 8px;
   }
@@ -150,14 +146,25 @@
   }
 }
 
+.additional-products__name {
+  max-width: 140px;
+
+  @media (min-width: $viewport-desktop) {
+    min-width: 233px;
+  }
+}
+
 .additional-products__cost {
+  max-width: 140px;
+
   @media (min-width: $viewport-tablet) {
-    width: 91px;
+    width: 81px;
     text-align: right;
   }
 
   @media (min-width: $viewport-desktop) {
-    width: auto;
+    max-width: 42px;
+    text-align: left;
   }
 }
 
@@ -165,7 +172,6 @@
   position: relative;
   width: 100%;
   height: 290px;
-  background-color: rgba(104, 183, 56, 0.85);
   background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-mobile@1x.webp") 1x, url("../../images/cat-case-mobile@2x.webp") 2x, url("../../images/cat-case-mobile@1x.jpg") 1x, url("../../images/cat-case-mobile@2x.jpg") 2x);
   background-repeat: no-repeat;
   background-size: 100% auto;
