--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -25,6 +25,7 @@
 
   @media (min-width: $viewport-desktop) {
     grid-area: 1 / 1 / 4 / 4;
+    background-color: #f2f2f2;
     background-image: image-set(url("../../images/map-desktop@1x.webp") 1x, url("../../images/map-desktop@2x.webp") 2x, url("../../images/map-desktop@1x.jpg") 1x, url("../../images/map-desktop@2x.jpg") 2x);
   }
 }
