--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -20,7 +20,7 @@
   }
 }
 
-.hero--background {
+.hero--mobile-background {
   background-image: image-set(url("../../images/hero-cat-mobile@1x.webp") type("image/webp") 1x, url("../../images/hero-cat-mobile@2x.webp") type("image/webp") 2x, url("../../images/hero-cat-mobile@1x.jpg") type("image/jpeg") 1x, url("../../images/hero-cat-mobile@2x.jpg") type("image/jpeg") 2x), linear-gradient(to right, #65a73e 50%, #62a53b 50%);
   background-repeat: no-repeat;
   background-position: center 0;
