--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -1,8 +1,11 @@
 .page {
   width: 100%;
+  height: 100%;
 }
 
 .page__body {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
   font-family: $general-font;
   font-size: 14px;
   font-weight: 400;
@@ -11,6 +14,7 @@
   color: #000000;
   margin: 0;
   width: 100%;
+  min-height: 100vh;
 }
 
 .page__catalog {
