--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -9,17 +9,16 @@
 @import "./blocks/container.scss";
 @import "./blocks/page.scss";
 @import "./blocks/main-header.scss";
+@import "./blocks/main-content.scss";
 @import "./blocks/button-burger.scss";
 @import "./blocks/nav.scss";
 @import "./blocks/hero.scss";
-@import "./blocks/button.scss";
 @import "./blocks/button-general.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/how-it-works.scss";
 @import "./blocks/live-example.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/main-footer.scss";
-@import "./blocks/main-catalog.scss";
 @import "./blocks/products.scss";
 @import "./blocks/products-card.scss";
 @import "./blocks/additional-products.scss";
