--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -68,7 +68,7 @@
 .main-footer__academy-logo-link {
   display: flex;
   align-items: center;
-  gap: 23px;
+  gap: 21px;
   justify-content: space-between;
   text-decoration: none;
   font-size: 16px;
@@ -86,11 +86,16 @@
 
   @media (min-width: $viewport-tablet) {
     width: 168px;
+    margin-bottom: 3px;
   }
 }
 
 .main-footer__academy-logo-text-link {
   width: 114px;
+
+  @media (min-width: $viewport-tablet) {
+    margin-bottom: 2px;
+  }
 }
 
 .main-footer__academy-logo-svg {
