--- a/source/styles/blocks/products.scss
+++ b/source/styles/blocks/products.scss
@@ -51,8 +51,8 @@
   @media (min-width: $viewport-tablet) {
     flex-flow: wrap;
     gap: 60px;
-    align-items: center;
-    justify-content: center;
+    // align-items: center;
+    // justify-content: center;
   }
 
   @media (min-width: $viewport-desktop) {
