Доделки после проверки (#16)
* Добавлена растровая графика webp

* Доработки для переполнения

* Доделки под pp и корректное переполнение

* Сделана оптимизация загрузки шрифтов

* недольшие доработки по фонам в index

* Переделки в классе button и sticky footer

* Добавлены ссылки на страницы

* Удален лишний css

* Доделки под pp

* Доделки по pp

* доделки после 1 проверки

--- a/source/styles/blocks/how-it-works.scss
+++ b/source/styles/blocks/how-it-works.scss
@@ -42,7 +42,6 @@
 
 .how-it-works__item {
   position: relative;
-  display: flex;
   width: 100%;
   min-height: 60px;
   counter-increment: list-number 1;
@@ -115,5 +114,13 @@
     padding: 109px 0 57px;
     z-index: 1;
     width: 245px;
+  }
+}
+
+.how-it-works_item-clock-br {
+  display: none;
+
+  @media (min-width: $viewport-tablet) {
+    display: block;
   }
 }
