--- a/source/styles/blocks/additional-products.scss
+++ b/source/styles/blocks/additional-products.scss
@@ -172,7 +172,7 @@
 .additional-products__order-all {
   position: relative;
   width: 100%;
-  height: 290px;
+  min-height: 290px;
   background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-mobile@1x.webp") 1x, url("../../images/cat-case-mobile@2x.webp") 2x, url("../../images/cat-case-mobile@1x.jpg") 1x, url("../../images/cat-case-mobile@2x.jpg") 2x);
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -201,7 +201,7 @@
 
   @media (min-width: $viewport-tablet) {
     background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-tablet@1x.webp") 1x, url("../../images/cat-case-tablet@2x.webp") 2x, url("../../images/cat-case-tablet@1x.jpg") 1x, url("../../images/cat-case-tablet@2x.jpg") 2x);
-    height: 200px;
+    min-height: 200px;
 
     &::before {
       width: 80px;
@@ -210,13 +210,11 @@
   }
 
   @media (min-width: $viewport-desktop) {
-    position: absolute;
-    right: 0;
-    top: -13px;
     background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-desktop@1x.webp") 1x, url("../../images/cat-case-desktop@2x.webp") 2x, url("../../images/cat-case-desktop@1x.jpg") 1x, url("../../images/cat-case-desktop@2x.jpg") 2x);
     width: 245px;
     min-height: 288px;
     margin-left: 81px;
+    transform: translateY(-13px);
   }
 }
 
