--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -10,11 +10,9 @@
     align-items: start;
     padding-top: 65px;
     background-image: none;
-    grid-template-rows: repeat(4, auto);
   }
 
   @media (min-width: $viewport-desktop) {
-    grid-template-rows: repeat(4, auto);
     padding-top: 29px;
     width: 1000px;
   }
@@ -29,6 +27,10 @@
   @media (min-width: $viewport-tablet) {
     background: none;
   }
+}
+
+.hero__title-wrap {
+  grid-area: 1 / 1 / 2 / 2;
 }
 
 .hero__title {
@@ -54,9 +56,12 @@
   @media (min-width: $viewport-desktop) {
     padding-top: 81px;
     padding-left: 80px;
-    grid-area: 1 / 1 / 2 / 2;
     max-width: 500px;
   }
+}
+
+.hero__subtitle-wrap {
+  grid-area: 2 / 1 / 3 / 2;
 }
 
 .hero__subtitle {
@@ -82,7 +87,6 @@
   @media (min-width: $viewport-desktop) {
     margin-bottom: 52px;
     padding-left: 80px;
-    grid-area: 2 / 1 / 3 / 2;
     max-width: 500px;
   }
 }
